# wow-ui-sim

./: .gitignore  ACCOMPLISHED.md  CLAUDE.md  Cargo.toml  DESIGN.md  PLAN.md  SCALING.md
.cargo/: config.toml
Interface/AddOns/Blizzard_FrameXML/: GuildInviteFrame.xml
Interface/BlizzardUI/Blizzard_APIDocumentation/: Blizzard_APIDocumentation.lua
Interface/BlizzardUI/Blizzard_AccessibilityTemplates/: QuestTextContrast.lua  TextSizeManagerGlue.lua  UserScaledElementTemplates.lua
Interface/BlizzardUI/Blizzard_AccountSaveUI/: Blizzard_AccountSaveUI.lua  Blizzard_AccountSaveUI.xml
Interface/BlizzardUI/Blizzard_AccountStore/: Blizzard_AccountStore.lua  Blizzard_AccountStore.toc  Blizzard_AccountStore.xml  Blizzard_AccountStoreCardTemplates.lua  Blizzard_AccountStoreCardTemplates.xml  Blizzard_AccountStoreCategoryList.lua  Blizzard_AccountStoreCategoryList.xml  Blizzard_AccountStoreItemDisplay.lua  (+4 more)
data/: atlas_elements.rs  global_strings.rs  spell_power.rs
docs/: action-bar-spell-icons.md  addon-loading-pipeline.md  anchor-resolution.md  bag-button-investigation.md  bench-talents.md  brief.md  button-text-rendering.md  debug-tools.md  event-system.md  frame-data-flow.md  global-frame-index-plan.md  glow-plan.md  hero-spec-icon-bug.md  hit-testing.md  keybinding-system.md  layout-system.md  lua-api.md  mask-texture-system.md  minimap-system.md  on-update-dirty-handlers.md  rendering-pipeline.md  texture-atlas-system.md  widget-system.md  xml-template-system.md
examples/: test_xml.rs
src/: atlas.rs  config.rs  cvars.rs  cvars.yaml  dump.rs  dump_texture.rs  error.rs  extract_textures.rs  gtk_app.rs  iced_app.rs  lib.rs  loader.rs  lua_server.rs  main.rs  saved_variables.rs  startup.rs  style.css  texture.rs  toc.rs
src/event/: mod.rs
src/iced_app/: app.rs  button_vis.rs  frame_collect.rs  hit_grid.rs  keybinds.rs  layout.rs  masking.rs  message_frame_render.rs  mod.rs  mouse.rs  nine_slice.rs  quad_builders.rs  render.rs  screenshot.rs  state.rs  statusbar.rs  styles.rs  tiling.rs  tooltip.rs  tree_dump.rs  update.rs  update_servers.rs  view.rs
src/loader/: addon.rs  button.rs  bytecode_cache.rs  error.rs  helpers.rs  helpers_anim.rs  lua_file.rs  mod.rs  precompiled.rs  tests.rs  xml_file.rs  xml_fontstring.rs  xml_frame.rs  xml_frame_extras.rs  xml_lifecycle.rs  xml_texture.rs
src/lua_api/: animation.rs  builtin_frames.rs  diagnostics.rs  env.rs  frame_methods.rs  game_data.rs  globals.rs  globals_legacy.rs  key_dispatch.rs  keybindings.rs  layout.rs  loader_env.rs  message_frame.rs  mod.rs  script_helpers.rs  simple_html.rs  state.rs  talent_state.rs  tooltip.rs  workarounds.rs  workarounds_bags.rs  workarounds_editmode.rs
src/render/: font.rs  glyph.rs  headless.rs  mod.rs  nine_slice.rs  software.rs  text.rs  texture.rs  ui.rs
src/sound/: mod.rs  real.rs  stub.rs
src/widget/: anchor.rs  frame.rs  mod.rs  registry.rs
src/xml/: mod.rs  parse.rs  template.rs  types.rs  types_elements.rs
test_addons/TestAddon/: TestAddon.lua
tests/: ace3.rs  action_bar.rs  addon_api.rs  anim_target_visibility.rs  animation_group.rs  aura_api.rs  autoroll_compat.rs  bags.rs  blizzard_shared.rs  button_state_textures.rs  c_collection_api.rs  c_item_api.rs  c_map_api.rs  c_system_api.rs  chat_frame.rs  checkbox.rs  click_all_frames.rs  click_targeting.rs  create_frame.rs  dropdown_api.rs  dump_tree.rs  error_handler.rs  font_api.rs  frame_creation.rs  frame_positions.rs  global_frames.rs  globals_legacy.rs  hero_talents.rs  intrinsic_types.rs  keyboard.rs  libstub.rs  load_autoroll.rs  message_frame.rs  methods_anchor.rs  methods_button.rs  methods_texture.rs  micro_menu.rs  missing_apis.rs  nine_slice.rs  pool_api.rs  (+20 more)
tests/common/: mod.rs
tools/: gen_atlas.rs  gen_global_strings.rs  gen_items.rs  gen_manifest.rs  gen_spells.rs
(+2424 files in other folders)
