[package]
name = "wow-ui-sim"
version = "0.1.0"
edition = "2024"
description = "World of Warcraft UI simulator for addon development"

[dependencies]
mlua = { version = "0.10", features = ["lua51", "vendored"] }
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
image = "0.25"
image-blp = "1"
tokio = { version = "1", features = ["sync", "rt", "time"] }
libc = "0.2"

# Iced GUI
iced = { version = "0.14", features = ["advanced", "canvas", "image", "tokio"] }
iced-layout-inspector = { path = "/home/osso/Projects/lib/iced-layout-inspector", features = ["server"] }

[dev-dependencies]
insta = "1.42"
tempfile = "3"

[profile.release]
lto = false
incremental = true
