[package]
name = "wow-ui-sim"
version = "0.1.0"
edition = "2024"
description = "World of Warcraft UI simulator for addon development"
default-run = "wow-sim"

[dependencies]
mlua = { version = "0.10", features = ["lua51", "vendored"] }
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
image = "0.25"
image-blp = "1"
tokio = { version = "1", features = ["sync", "rt", "time"] }
libc = "0.2"
glob = "0.3"
clap = { version = "4", features = ["derive"] }
regex = "1"
walkdir = "2"
phf = { version = "0.11", features = ["macros"] }
phf_codegen = "0.11"

# Iced GUI
iced = { version = "0.14", features = ["advanced", "canvas", "image", "tokio", "wgpu"] }
iced_wgpu = "0.14"
iced-layout-inspector = { path = "/home/osso/Projects/lib/iced-layout-inspector", features = ["server"] }

# Text rendering
cosmic-text = "0.15"

# GPU rendering
wgpu = "27.0"
bytemuck = { version = "1.21", features = ["derive"] }
pollster = "0.4"
webp = "0.3.1"

[[bin]]
name = "wow-sim"
path = "src/main.rs"

[[bin]]
name = "wow-cli"
path = "src/bin/wow_cli/main.rs"

[[bin]]
name = "gen_atlas"
path = "tools/gen_atlas.rs"

[[bin]]
name = "gen_global_strings"
path = "tools/gen_global_strings.rs"

[[bin]]
name = "gen_spells"
path = "tools/gen_spells.rs"

[[bin]]
name = "gen_items"
path = "tools/gen_items.rs"

[[bin]]
name = "gen_manifest"
path = "tools/gen_manifest.rs"

[dev-dependencies]
insta = "1.42"
pollster = "0.4"
tempfile = "3"

[profile.release]
lto = false
incremental = true

[profile.dev]
lto = false
incremental = true
debug = "line-tables-only"
